<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvDiseaseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disease_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvMedication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medication"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvAdmitDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admit_date"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingTop="10dp"/>

</LinearLayout>
